overflow scroll issue fixed, background updated

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,4 @@
 .header {
-    /* background-color: ivory; */
+    background-color: white;
     border-bottom: 1px solid gainsboro;
 }
