--- a/src/components/Header/Profile/Profile.css
+++ b/src/components/Header/Profile/Profile.css
@@ -8,7 +8,6 @@ p {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    vertical-align: middle;
     max-width: 300px;
 }
 
